@@ -22,13 +22,13 @@
                 </rule>
             </languagerule>
             
-            <languagerule languagerulename="TestLanguage">
-                <rule break="no">
-                    <beforebreak>\b(fooabbr|barabbr)\.\s</beforebreak>
+            <languagerule languagerulename="Default">
+                <rule break="yes">
+                    <beforebreak>[\.!?…]\s</beforebreak>
                     <afterbreak/>
                 </rule>
                 <rule break="yes">
-                    <beforebreak>[\.!?…]\s</beforebreak>
+                    <beforebreak>[\.!?…]\p{Lu}</beforebreak>
                     <afterbreak/>
                 </rule>
             </languagerule>
@@ -37,7 +37,7 @@
         <maprules>
             <languagemap languagepattern="[a-z]{2}_one" languagerulename="ByLineBreak"/>
             <languagemap languagepattern="[a-z]{2}_two" languagerulename="ByTwoLineBreaks"/>
-            <languagemap languagepattern="yy.*" languagerulename="TestLanguage"/>
+            <languagemap languagepattern=".*" languagerulename="Default"/>
         </maprules>
     </body>
 </srx>
