@@ -1,0 +1,37 @@
+/* LanguageTool, a natural language style checker 
+ * Copyright (C) 2014 Daniel Naber (http://www.danielnaber.de)
+ * 
+ * This library is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU Lesser General Public
+ * License as published by the Free Software Foundation; either
+ * version 2.1 of the License, or (at your option) any later version.
+ *
+ * This library is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public
+ * License along with this library; if not, write to the Free Software
+ * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301
+ * USA
+ */
+package org.languagetool.tokenizers;
+
+import org.junit.Test;
+import org.languagetool.TestTools;
+
+public class SimpleSentenceTokenizerTest {
+
+  private static final SimpleSentenceTokenizer tokenizer = new SimpleSentenceTokenizer();
+
+  @Test
+  public void testTokenize() throws Exception {
+    testSplit("Hi! ", "This is a test. ", "Here's more. ", "And even more?? ", "Yes.");
+  }
+
+  private void testSplit(String... sentences) {
+    TestTools.testSplit(sentences, tokenizer);
+  }
+
+}
